# abn-amro-statement-parser

./: LICENSE  README.md  TXT_SAMPLE.TAB  pyproject.toml  run_tests.py
.github/workflows/: python-app.yml
abnamroparser/: icspdfparser.py  tsvparser.py
abnamrotsvparser/: __init__.py
src/abnamroparser/: icspdfparser.py  tsvparser.py  util.py
