[project]
name = "abn-amro-tsv-parser"
version = "0.9.0"
description = "Parser for the Dutch ABN AMRO bank transactions"
keywords = ["ABN AMRO", "bank statement", "bank transactions", "bank mutations", "TSV"]
requires-python = ">=3.8"
dependencies = [
    "py-moneyed",
]
authors = [
    { name="Denilson Sá Maia", email="denilsonsa@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.urls]
Homepage = "https://github.com/denilsonsa/abn-amro-tsv-parser"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
