[project]
name = "abn-amro-statement-parser"
version = "0.9.1"
description = "Parser for the Dutch ABN AMRO bank transactions"
keywords = ["ABN AMRO", "bank statement", "bank transactions", "bank mutations", "TSV", "credit card"]
requires-python = ">=3.8"
dependencies = [
    "py-moneyed",

	# Technically, pypdf is an optional dependency. But in practice
	# I don't want to go to the trouble of configuring optional
	# dependencies, nor force this trouble to the end-users.
	# So, everyone gets to install it. Which is simple enough,
	# as it is a pure-python module with no mandatory dependencies.
    "pypdf",
]
authors = [
    { name="Denilson Sá Maia", email="denilsonsa@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.urls]
Homepage = "https://github.com/denilsonsa/abn-amro-statement-parser"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
# Increasing from the default 88.
# 100 is probably enough too.
line-length = 104
